# oh-utils

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  DEVELOPMENT_SETUP_SUMMARY.md  INTEGRATION_TESTING_SETUP.md  INTEGRATION_TESTING_SUMMARY.md  M3-COMPLETION-SUMMARY.md  Makefile  QUICK_START.md  README.md  TAIL_FOLLOW_FEATURE.md  debug_workspace_zip.py  demo.tape  pyproject.toml  release-please-config.json  repo.md  test-results.xml  test_api_response.py  test_debug.py  test_final.py  test_fixed_hooks.py  test_violation.py  trajectory-db4bf7df (1).json  trajectory-db4bf7df.json  trajectory-fake-uui (1).json
.github/: RELEASE_WORKFLOW.md  TESTING_RELEASES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pr-review-by-openhands.yml  pre-commit.yml  release.yml  test-release.yml
.openhands/: pre-commit.sh  setup.sh
.openhands/microagents/: repo.md
.openhands/templates/: design-document-template.md
.pr/: architectural-refactoring-plan.md  architectural-review-findings.md
conversation-downloader/: README.md
conversation_downloader/: CLOUD_API_SUCCESS.md  README.md  __init__.py  openhands_conversation_downloader.py
conversation_manager/: README.md  __init__.py  conversation_manager.py
doc/: agent-prompting-template.md  architectural-review.md  architecture.md  milestone-completion-guide.md  v1-api-integration-design.md
doc/design-doc/: multi-command-cli-ohc.md  oh-debug-cli.md  textual-conversation-manager-redesign.md  textual-ux-wireframes-and-research.md
doc/test-plan/: manual-test-plan.md  openhands-api-reference.md  test-execution-2025-11-26-m1.md  test-execution-2025-11-26-m2.md  test-execution-2025-11-26-m3.md  test-execution-2025-11-26-run-01.md  test-execution-2025-11-26.md  test-execution-2025-11-27-m4.md  test-execution-checklist-template.md
ohc/: __init__.py  api.py  cli.py  command_utils.py  config.py  conversation_commands.py  conversation_display.py  debug_config.py  interactive.py  server_commands.py
ohc/debug/: commands.py  configure_cmd.py  health_cmd.py  list_cmd.py  runtime_cmd.py  utils.py
ohc/k8s/: __init__.py  client.py  detection.py  queries.py
ohc/v0/: __init__.py  api.py
ohc/v1/: __init__.py  api.py
openhands-api-utility/: README.md
openhands_api_utility/: README.md  __init__.py  openhands_utility.py
scripts/: record_api_responses.py  sanitize_fixtures.py  update_fixtures.py
scripts/v0/: record_api_responses.py  sanitize_fixtures.py
scripts/v1/: record_api_responses.py  sanitize_fixtures.py
tests/: README.md  conftest.py  test_api.py  test_api_error_handling.py  test_api_integration.py  test_api_main.py  test_cli.py  test_cli_integration.py  test_command_integration.py  test_command_utils.py  test_config.py  test_conversation_commands.py  test_conversation_display.py  test_conversation_manager.py  test_debug_commands.py  test_debug_config.py  test_interactive.py  test_k8s.py  test_server_commands.py  test_url_handling.py  test_v1_api_integration.py  vcr_config.py
tests/fixtures/: conversation_details.json  conversation_start.json  conversations_list.json  conversations_list_paginated.json  git_changes.json  options_models.json  select_file_not_found.json  select_file_readme.json  trajectory.json
tests/fixtures/sanitized/: conversation_details.json  conversations_list.json  conversations_list_paginated.json  conversations_list_paginated_success.json  conversations_list_success.json  git_changes.json  replacement_mapping.json  select_file_not_found.json  select_file_readme.json  trajectory.json
tests/fixtures/v0/sanitized/: conversation_create.json  conversations_list_for_resolve.json  conversations_list_paginated_success.json  replacement_mapping.json  trajectory.json
tests/fixtures/v1/sanitized/: app_conversations_search_basic.json  bash_zip_workspace.json  conversation_create.json  conversation_get.json  conversations_list_for_resolve.json  events_count_basic.json  events_search_basic.json  events_search_unauthorized.json  file_download.json  git_changes.json  sandbox_info.json  sandbox_paused.json  trajectory_download.json  workspace_zip_download.json
