[project]
name = "oh-utils"
version = "0.1.0"
description = "A collection of utilities for working with OpenHands (formerly All-Hands-AI)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
oh-conversation-downloader = "openhands_api_utility.openhands_utility:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openhands_api_utility"]
